feat(#68): edit monitor
